main.css
/* ... */
.match-popup-btns > button:first-child {background-color: #D80202;margin-right: 0px; margin-left: 0px;margin-left: 10px;color: white;}

.match-popup-container > h2 {font-size: 18px;margin-top: 15px;margin-bottom: 15px;}

.match-popup-container {background-color: white;  ;width: 100%;height: fit-content;position: fixed;
    bottom: 0px;}

    .top-friend > h2 {text-align: left;
        margin-left: 17px;
        font-size: 26px;
        font-weight: 600;
        margin-top: 10px;}

        .top-friend > div {    padding-top: 0px;
            margin-left: 19px;
            font-weight: normal;
            margin-top: -4px;}
.friend-session > p {text-align: center;width: 100%;font-size: 12px;}

.friendID {    width: 100%;
    text-align: center;
    font-size: 17px;
    margin-bottom: 23px;}

    #friend-session {display: none;}

/*---------------------------------------------Game Zone--------------------------------------------------*/

.shield {border: none; color: white;border-radius: 50px; padding-left: 10px;padding-right: 10px;padding-top: 5px;padding-bottom: 5px;width: 114%;
    margin-left: -5px;
    margin-bottom: 6px;}


#damageShield{display: none}
#tankShield{display: none;}
#supportShield{display: none;}


.shield > img {float: left;}

.shield > p {    display: inline-block;
    text-align: left;
    float: left;
    font-size: 10px;margin-left: 5px;}

.play-area {background-image: url(/Assets/color\ outline.svg);;background-repeat: no-repeat;background-size: cover;background-position-y: 50px;border-bottom: solid 1px lightgray; padding-bottom: 32px;}

#selection {display:none }

.enemy-view {height: 225px;}

.enemy-view > .hero-gallery {margin-top: 59px;}

.grid-button{ background-color:transparent;border: none;opacity: 0;;}

.grid-button > img {opacity: 0 !important;}

.grid-button:focus {outline: none;}

.starter {display: inline-block;}

.selection-grid {margin: auto; width: 363px;position: relative;margin-top:61px;z-index: 15;}

.shield-item {width: 32%;
  display: inline-block;
  height: 246px;background-color: transparent;}

  .selection-shield-wrapper {    position: fixed;
    bottom: 171px;
    left: 0px;
    width: 100%;display: none;}

    .selection-support-wrapper {
      position: fixed;
      bottom: 171px;
      left: 0px;
      width: 100%;
      display: none;
    }

.grid-button:first-of-type {margin-left: 0px;}

.grid-button {margin-left: 15px;}

.select-cover {position: fixed;height: 100vh; width: 100%;background-color: rgba(0, 0, 0, 0.658);top: 237px;left: 0px;;}

.selection {position: fixed;top: 0px; width: 100%; left: 0px; height: 100vh; z-index: 150;;background-color: transparent;}

.selection-container {background-color: white;
    position: fixed;
    width: 100%;
    bottom: 0px;
    padding-bottom: 10px;}

.selection-container > p {font-size: 14px;font-weight: 600;width: 100%; text-align: center;padding-top: 10px;}

#startTheBattle {display: none;}

.start-battle {position: fixed; top: 0px;left: 0px;width: 100%; height: 100vh; background-color: rgba(0, 0, 0, 0.534) ;z-index: 500;}

.start-battle-btn {position: fixed;bottom: 0px;width: 100%;background-color: white;padding-top: 7px;padding-bottom: 7px;}

.enemy-view {height: 225px;}

.enemy-view > h1 {margin-top: 0px;font-size: 21px;}

.enemy-view > p {width: 100%; text-align: center;font-weight: 600;margin-top: 10px;font-size: 13px;}

.play-status {margin-top: 30px;margin-bottom:71px;}

.play-status > h2 {width: 100%; text-align: center;font-size: 21px;}

.battle-point-wrapper {margin: auto; width: 140px;background-color: #FFE600;border-radius: 50px; margin-top: 10px;margin-bottom: 10px;height: 22px;}

.battle-point-wrapper > p {text-align: center; width: 100%;font-weight: 600;}

.roleIcon {width: 65px;
    margin-left: 10px;
    margin-top: 4px
}


#dead1, #dead2, #dead3 {display: none;}

.killed-overlay {position: absolute;z-index: 8000;margin-top: -56px;}

.killed-overlay > img {margin-left: 19px;border-radius: 10px;}

.killed-overlay:first-child {margin-left: 0px;}

.first {margin-left: -8px !important;}

.swap-container > h2 > i {    position: relative;
    top: 9px;color: rgb(161, 161, 161);margin-right: 3px;}

    .swap-container > h2 {font-size: 15px;margin-bottom: 10px;}

.status {border: none !important;height: fit-content !important;font-size: 13px;margin-left: 14px;padding-top: 14px}

.character-overflow {height: 200px;overflow-x: scroll;white-space: nowrap}

.character-overflow > li {white-space: nowrap;display: inline-block;display: none;}

.gameZone {position: fixed;left: 0px;top: 0px; width: 100%; height: 100vh;background-color: white;z-index: 150;display:none;overflow: scroll;}

.gameView {width: 100%;height: 247px;}

.players {display: inline-block;width: 49%;}
.player-bar {width: 150px; background-color: white;border-radius: 50px;padding:2px}

.bar-inner {background-color: green; width: 100%; height: 6px;border-radius: 50px;}

.player-container {margin: auto; width: 92%;padding-top: 46px}

.players > img {width: 120px;height: 110px;object-fit: scale-down;}

#player2 {    position: relative;
    top: -124px;}

#player2 > img {-webkit-transform: scaleX(-1);
    transform: scaleX(-1) !important;float: right;}

    .health-container > h4 {display: inline-block;}

    .health-container > p {display: inline-block;font-size: 11px;font-weight: 600;}

    .ability-button {width: 46.5%;padding-top: 14px;padding-bottom: 14px;font-weight: 600;background-color: white;border: solid 1px lightgray;border-radius: 5px;    margin: 5px;

    }

.ability-button:active {background-color: lightgray;}

    .ability-container {margin-top: -100px;padding-left: 10px;padding-right: 10px;}

    .abilityDescription {position: absolute;
       
    
        font-size: 10px;
        font-weight: 600;
        margin-top: 15px;text-align: left;margin-left: -115px;}
/* ... */

